llama3 aipparel added

--- a/configs/garment_tokenizer/standardize/garmentcodedata_regression_stats.yaml
+++ b/configs/garment_tokenizer/standardize/garmentcodedata_regression_stats.yaml
@@ -1,6 +1,4 @@
 defaults:
-  - outlines: sewfactory_token 
-  - rotations: sewfactory_regression
-  - stitch_tags: sewfactory 
-  - translations: garmentcodedata_regression
-  - vertices: garmentcodedata_regression
+  - rotations: gcd_regression
+  - translations: gcd_regression
+  - vertices: gcd_regression
