--- a/configs/vqa_dataset/llava.yaml
+++ b/configs/vqa_dataset/llava.yaml
@@ -1,4 +1,4 @@
 _target_: data.datasets.vqa.LLaVAInstruct
 
-data_file_path: /scratch/m000043/garmentcodedata
-image_root_path: /scratch/m000043/garmentcodedata_editing
+data_file_path: /scratch/m000043/llava-data/data_file.json
+image_root_path: /scratch/m000043/llava-data/
