--- a/configs/train_aipparel_llama3.2_11b.yaml
+++ b/configs/train_aipparel_llama3.2_11b.yaml
@@ -33,6 +33,7 @@ version: meta-llama/Llama-3.2-11B-Vision-Instruct
 precision: bf16
 eval_only: False
 gen_only: False
+gen_split: val
 
 # training
 from_start: False
