--- a/configs/train_v2.yaml
+++ b/configs/train_v2.yaml
@@ -3,20 +3,20 @@
 
 # 0.5 * stitch cls loss (focal loss) + 0.005 * stitch ce loss + 5 * panel loss
 defaults: 
-  - dataset: gcd_overfit
+  - dataset: gcdv2_dataset
   - garment_tokenizer: regression_garment_tokenizer
   - _self_
 
 model:
   edge_loss_weight: 0.1
-  num_freq: 9
+  num_freq: 0
   num_regression_layers: 2
-    # use_flash_attn: True
+  discretize_params: True
 
 optimizer: 
-  lr: 0.0006
+  lr: 1e-5
   beta1: .9
-  beta2: 0.95
+  beta2: 0.99
 
 wandb_info:
   wandb_dir: /scratch/m000051/garment_gang
@@ -24,7 +24,7 @@ wandb_info:
 
 
 project: vlg
-run_name: overfit
+run_name: train_v2
 run_id: null
 run_local_path: null
 
@@ -33,17 +33,18 @@ version: meta-llama/Llama-3.2-11B-Vision-Instruct
 precision: bf16
 eval_only: False
 gen_only: False
-gen_split: val
+gen_split: train
 
 # training
 from_start: False
 resume: null
 
-grad_accumulation_steps: 1
-num_steps: 20000
-save_freq: 500
-warmup_steps: 100
-batch_size: 1
+tune_adaptor: False
+grad_accumulation_steps: 8
+num_steps: 2000
+save_freq: 200
+warmup_steps: 0
+batch_size: 6
 
 hydra:
   run:
